--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,9 +17,9 @@ services:
     build: .
     ports:
       - 8000:8000
-    environment:
-      - POSTGRES_URL=postgres://postgres:postgres@postgres:5432/postgres
-      - PORT=8000
+    env_file:
+      - dev.env
+      - apikeys.env
     depends_on:
       db:
         condition: service_healthy
