--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "build": "tsc"
   },
   "dependencies": {
+    "@discordjs/core": "^0.6.0",
     "dotenv": "^16.3.0",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "pg": "^8.11.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.32.0",
@@ -18,6 +20,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
     "ts-node": "^10.9.1"
   }
 }
