--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
         "module": "CommonJS",
+        "target": "ES2016",
         "moduleResolution": "nodenext",
         "declaration": true,
         "noImplicitAny": true,
