--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,11 +15,10 @@ services:
       retries: 5
   app:
     build: .
+    env_file:
+      - ./.env
     ports:
       - 8000:8000
-    env_file:
-      - dev.env
-      - apikeys.env
     depends_on:
       db:
         condition: service_healthy
